@@ -376,6 +376,7 @@ pm-magnesium-oxide=Magnesium oxide
 pm-calcium-silicate=Calcium silicate
 pm-broken-vanadium-redox-battery=Broken vanadium redox battery
 pm-broken-lithium-sulfur-battery=Broken lithium-sulfur battery
+pm-vacuum-tube-getter=Vacuum tube getter
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
